--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Site</title>
+    <link href="estilo.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Meu site</h1>
-    <h1>Meu site</h1>
-    <h1>Meu site</h1>
-    <h1>Meu site</h1>
-    <h1>Meu site</h1>
+    <div class="container-principal">
+        <h1>Meu site</h1>
+        <h1>Meu site</h1>
+        <h1>Meu site</h1>
+        <h1>Meu site</h1>
+        <h1>Meu site</h1>
+    </div>
+    
     
 </body>
 </html>
